first misc pass